add vk to package.json

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "prepublish:web": "npm run check:bindings && NODE_ENV=production node src/build/build-web.js",
     "prepublish:node": "npm run check:bindings && node src/build/copy-artifacts.js && rimraf ./dist/node && tsc -p tsconfig.node.json && node src/build/copy-to-dist.js && NODE_ENV=production node src/build/build-node.js",
     "prepublish:full": "npm run prepublish:web && npm run prepublish:node",
-    "test:dump-verification-keys": "npm run build && ./run tests/vk-regression/vk-regression.ts --bundle --dump",
+    "regression:dump-vks": "./scripts/tests/dump-vks.sh",
+    "regression:check-vks": "./scripts/tests/check-vks.sh",
     "format": "prettier --write --ignore-unknown",
     "format:check": "prettier --check --ignore-unknown",
     "format:md": "prettier --config .prettierrc.md.cjs --write '**/*.md'",
