--- a/package.json
+++ b/package.json
@@ -52,15 +52,15 @@
     "build": "./src/build/build.sh",
     "build:bindings-node": "./src/bindings/scripts/build-o1js-node.sh",
     "build:bindings-all": "./src/bindings/scripts/update-o1js-bindings.sh",
-    "build:bindings-remote": "./src/bindings/scripts/remote-build-bindings.sh && npm run build",
+    "build:bindings-remote": "./scripts/build/build-bindings-remote.sh",
     "build:bindings-download": "./src/bindings/scripts/download-bindings.sh",
     "build:web": "./scripts/build/build-web.sh",
     "build:examples": "./scripts/build/build-examples.sh",
-    "check:bindings": "test -d ./src/bindings/compiled || npm run build:bindings-download",
+    "check:bindings": "./scripts/build/check-for-bindings.sh",
     "build:docs": "npx typedoc",
-    "prepublish:web": "npm run check:bindings && NODE_ENV=production node src/build/build-web.js",
-    "prepublish:node": "npm run check:bindings && node src/build/copy-artifacts.js && rimraf ./dist/node && tsc -p tsconfig.node.json && node src/build/copy-to-dist.js && NODE_ENV=production node src/build/build-node.js",
-    "prepublish:full": "npm run prepublish:web && npm run prepublish:node",
+    "prepublish:web": "./scripts/prepublish/prepublish-web.sh",
+    "prepublish:node": "./scripts/prepublish/prepublish-node.sh",
+    "prepublish:full": "./scripts/prepublish/prepublish-all.sh",
     "regression:dump-vks": "./scripts/tests/dump-vks.sh",
     "regression:check-vks": "./scripts/tests/check-vks.sh",
     "format": "prettier --write --ignore-unknown",
