--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "e2e:run-server": "node dist/web/server.js",
     "e2e:install": "npx playwright install --with-deps",
     "e2e:show-report": "npx playwright show-report tests/report",
-    "update-changelog": "./update-changelog.sh",
+    "update-changelog": "./scripts/changelog/update-changelog.sh",
     "prepare": "husky"
   },
   "author": "O(1) Labs",
