--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,5 +1,7 @@
 {
-  "extends": "oxlint/recommended",
+  "extends": [
+    "oxlint/recommended"
+  ],
   "rules": {
     "erasing-op": "off",
     "no-new-array": "off",
@@ -7,7 +9,8 @@
     "no-unsafe-finally": "off",
     "no-unused-labels": "off",
     "no-useless-escape": "off",
-    "no-wrapper-object-types": "off"
+    "no-wrapper-object-types": "off",
+    "no-unused-vars": "off"
   },
   "ignorePatterns": [
     "_build/",
