--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@playwright/test": "^1.48.0",
     "@types/jest": "^27.0.0",
     "@types/libsodium-wrappers-sumo": "^0.7.8",
+    "@types/minimist": "^1.2.5",
     "@types/node": "^18.14.2",
     "esbuild": "^0.25.5",
     "expect": "^29.0.1",
