--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "build:web": "./scripts/build/build-web.sh",
     "build:examples": "./scripts/build/build-examples.sh",
     "check:bindings": "./scripts/build/check-for-bindings.sh",
-    "build:docs": "npx typedoc",
+    "build:docs": "typedoc",
     "prepublish:web": "./scripts/prepublish/prepublish-web.sh",
     "prepublish:node": "./scripts/prepublish/prepublish-node.sh",
     "prepublish:full": "./scripts/prepublish/prepublish-full.sh",
@@ -69,9 +69,9 @@
     "format:md:check": "prettier --config .prettierrc.md.cjs --check '**/*.md'",
     "clean": "./scripts/clean/clean.sh",
     "clean:all": "./scripts/clean/clean-all.sh",
-    "lint": "npx oxlint",
-    "lint:fix": "npx oxlint --fix --fix-suggestions",
-    "lint:strict": "npx oxlint --max-warnings 0",
+    "lint": "oxlint",
+    "lint:fix": "oxlint --fix --fix-suggestions",
+    "lint:strict": "oxlint --max-warnings 0",
     "test": "./run-jest-tests.sh",
     "test:integration": "./run-integration-tests.sh",
     "test:unit": "./run-unit-tests.sh",
@@ -99,7 +99,6 @@
     "fs-extra": "^10.0.0",
     "glob": "^8.0.3",
     "graphql": "^16.10.0",
-    "howslow": "^0.1.0",
     "husky": "^9.1.7",
     "jest": "^28.1.3",
     "jstat": "^1.9.6",
