--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -39,3 +39,52 @@ jobs:
         with:
           commit_message: "auto update npmDepsHash"
           file_pattern: "npmDepsHash"
+
+
+  Lint-Format-and-TypoCheck:
+    if: github.event.pull_request.labels.*.name != 'skip-lint'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Setup Node.JS
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Get changed files
+        id: changed_files
+        run: |
+          git fetch --depth=1 origin ${{ github.event.pull_request.base.sha }}
+          git fetch --depth=1 origin ${{ github.event.pull_request.head.sha }}
+          git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} > changed_files.txt
+          TOTAL=$(wc -l < changed_files.txt)
+          echo "count=$TOTAL" >> $GITHUB_OUTPUT
+          echo "files=$(cat changed_files.txt | xargs)" >> $GITHUB_OUTPUT
+      - name: Run Prettier Check
+        if: steps.changed_files.outputs.count > 0
+        run: xargs npm run format:check < changed_files.txt
+
+      - name: Run Oxlint
+        if: steps.changed_files.outputs.count > 0
+        run: xargs npm run lint:strict < changed_files.txt
+
+      - name: Run Markdown Format Check
+        run: npm run format:md:check
+
+      - name: Run codespell
+        if: github.event.pull_request.labels.*.name != 'no-typo-check'
+        uses: codespell-project/actions-codespell@v2
+        with:
+          check_filenames: true
+          path: ${{ steps.changed_files.outputs.files }}
+          skip: "*.json,./node_modules,./dist,./.husky,./.git,./src/mina/**/*,./src/bindings/compiled/**/*"
+          check_hidden: false
+          ignore_words_list: "tHi,modul,optin,deriver,PRing,toWords,iSelf"
