--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -60,7 +60,7 @@ jobs:
           ref: ${{ inputs.target_ref || github.ref }}
           proof_systems_commit: ${{ inputs.proof_systems_commit }}
 
-  Lint-Format-and-TypoCheck:
+  Lint-and-Format:
     strategy:
       matrix:
         node: [20]
@@ -107,16 +107,6 @@ jobs:
 
       - name: Run Markdown Format Check
         run: npm run format:md:check
-
-      - name: Run codespell
-        if: steps.get_changed_files.outputs.files_changed == 'true' && github.event.pull_request.labels.*.name != 'no-typo-check'
-        uses: codespell-project/actions-codespell@master
-        with:
-          check_filenames: true
-          path: ${{ steps.get_changed_files.outputs.files }}
-          skip: "*.json,./node_modules,./dist,./.husky,./.git,./src/mina/**/*,./src/bindings/compiled/**/*"
-          check_hidden: false
-          ignore_words_list: "tHi,modul,optin,deriver,PRing,toWords,iSelf"
 
   Upload-bindings:
     name: upload bindings artifact
