--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -41,7 +41,7 @@ jobs:
           file_pattern: "npmDepsHash"
 
 
-  Lint-Format-and-TypoCheck:
+  Lint-and-Format:
     if: github.event.pull_request.labels.*.name != 'skip-lint'
     runs-on: ubuntu-latest
 
@@ -78,13 +78,3 @@ jobs:
 
       - name: Run Markdown Format Check
         run: npm run format:md:check
-
-      - name: Run codespell
-        if: github.event.pull_request.labels.*.name != 'no-typo-check'
-        uses: codespell-project/actions-codespell@v2
-        with:
-          check_filenames: true
-          path: ${{ steps.changed_files.outputs.files }}
-          skip: "*.json,./node_modules,./dist,./.husky,./.git,./src/mina/**/*,./src/bindings/compiled/**/*"
-          check_hidden: false
-          ignore_words_list: "tHi,modul,optin,deriver,PRing,toWords,iSelf"
