--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -41,7 +41,7 @@ jobs:
           file_pattern: "npmDepsHash"
 
 
-  Lint-and-Format:
+  Lint-Format-and-TypoCheck:
     if: github.event.pull_request.labels.*.name != 'skip-lint'
     runs-on: ubuntu-latest
 
@@ -71,16 +71,24 @@ jobs:
       - name: Run Prettier Check
         if: steps.changed_files.outputs.count > 0
         run: xargs npm run format:check < changed_files.txt
+        continue-on-error: true
 
       - name: Run Oxlint
         if: steps.changed_files.outputs.count > 0
         run: xargs npm run lint:strict < changed_files.txt
+        continue-on-error: true
 
       - name: Run Markdown Format Check
         run: npm run format:md:check
+        continue-on-error: true
 
       - name: Run cspell
         if: github.event.pull_request.labels.*.name != 'no-typo-check'
         uses: streetsidesoftware/cspell-action@v7
+        continue-on-error: true
         with:
           config: .config/cspell.json
+      
+      - name: Fail if any checks fail
+        if: failure()
+        run: echo "Some checks failed, failing" && exit 1
