--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@napi-rs/cli": "3.3.0",
     "blakejs": "1.2.1",
     "cachedir": "^2.4.0",
     "js-sha256": "^0.9.0",
