--- a/package.json
+++ b/package.json
@@ -115,9 +115,9 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@noble/hashes": "^1.3.2",
     "blakejs": "1.2.1",
     "cachedir": "^2.4.0",
-    "js-sha256": "^0.9.0",
     "libsodium-wrappers-sumo": "^0.7.15",
     "reflect-metadata": "^0.1.13",
     "stacktrace-js": "^2.0.2",
