--- a/src/mina-signer/package.json
+++ b/src/mina-signer/package.json
@@ -38,8 +38,7 @@
     "README.md"
   ],
   "dependencies": {
-    "blakejs": "^1.2.1",
-    "js-sha256": "^0.9.0"
+    "blakejs": "^1.2.1"
   },
   "devDependencies": {
     "pkg-pr-new": "^0.0.9"
