--- a/.github/workflows/pkg_pr_release.yml
+++ b/.github/workflows/pkg_pr_release.yml
@@ -20,17 +20,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Node.JS ${{ matrix.node }}
+      - name: Setup Node.JS 20
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 20
       - name: build
         uses: ./.github/actions/build
       - name: Build o1js and mina-signer
         run: |
-          npm run prepublishOnly
+          npm run prepublish:full
           cd src/mina-signer
           npm ci
-          npm run prepublishOnly
+          npm run prepublish:full
       - name: Publish o1js and mina-signer on pkg-pr-new
         run: npx pkg-pr-new publish ./ ./src/mina-signer # Enable `--compact` once published to NPM with `repository` in package.json
