break out wasm and jsoo builds

--- a/package.json
+++ b/package.json
@@ -57,6 +57,12 @@
     "build:web": "./scripts/build/build-web.sh",
     "build:examples": "./scripts/build/build-examples.sh",
     "check:bindings": "./scripts/build/check-for-bindings.sh",
+    "build:wasm": "npm run build:wasm:web && npm run build:wasm:node",
+    "build:wasm:web": "./scripts/build/wasm/build-web.sh",
+    "build:wasm:node": "./scripts/build/wasm/build-node.sh",
+    "build:jsoo": "npm run build:jsoo:web && npm run build:jsoo:node",
+    "build:jsoo:web": "./scripts/build/jsoo/build-web.sh",
+    "build:jsoo:node": "./scripts/build/jsoo/build-node.sh",
     "build:docs": "typedoc",
     "prepublish:web": "./scripts/prepublish/prepublish-web.sh",
     "prepublish:node": "./scripts/prepublish/prepublish-node.sh",
