--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -72,42 +72,10 @@ jobs:
 
 
   Pkg-pr-new:
-    strategy:
-      matrix:
-        node: [20]
-
     runs-on: [ubuntu-latest]
     steps:
-      - uses: actions/checkout@v4
-      - name: Restore repository
-        uses: actions/cache@v4
-        with:
-          path: .
-          key: repo-${{ github.sha }}
-      - name: Setup Node.JS ${{ matrix.node }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node }}
-      - name: build
-        uses: ./.github/actions/build
-      - name: Build o1js and mina-signer
-        run: |
-          npm run prepublishOnly
-          cd src/mina-signer
-          npm ci
-          npm run prepublishOnly
-      - name: Publish o1js and mina-signer on pkg-pr-new
-        run: npx pkg-pr-new publish ./ ./src/mina-signer # Enable `--compact` once published to NPM with `repository` in package.json
-
-        # TODO is this redundant with the last step?
-      - name: Publish to NPM if version has changed
-        uses: JS-DevTools/npm-publish@v3
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
-          package: './src/mina-signer/package.json'
-          strategy: upgrade
-        env:
-          INPUT_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: release-pkg-pr-version
+        uses: ./.github/actions/release-pkg-pr-version
 
   Release-on-NPM:
     if: github.ref == 'refs/heads/main'
