--- a/.github/actions/perf-regression/action.yml
+++ b/.github/actions/perf-regression/action.yml
@@ -1,28 +1,27 @@
-name: Perf Regression (dump/check)
-description: Dump or check perf baseline; auto mode via label; find/download prior baseline; run tests; upload on dump.
+name: Performance Regression (Dump or Check)
+description: Runs performance regression tests in dump or check mode. Auto mode determines the mode based on the PR label.
 
 inputs:
   mode:
-    description: "'dump' | 'check' | 'auto' (auto uses live PR labels)"
+    description: "'dump' | 'check' | 'auto' (auto uses the PR label)"
     required: false
     default: auto
   label_name:
-    description: "Label that triggers dump when present (auto mode)"
+    description: "Label that enables dump mode when present (auto mode)"
     required: false
     default: dump-performance
 
   artifact_name:
-    description: "Artifact name used to store the baseline"
+    description: "Artifact name used to store the performance baseline JSON"
     required: false
     default: perf-regression-json
   baseline_path:
-    description: "Path for the baseline JSON in the workspace"
+    description: "Path where the performance baseline JSON is stored"
     required: false
     default: tests/perf-regression/perf-regression.json
 
-  # NOTE: defaults here must be literals; leave empty and resolve at runtime
   workflow_name:
-    description: "Workflow display name to search runs for"
+    description: "Workflow name to search for prior runs"
     required: false
     default: ""
   branch:
@@ -35,27 +34,14 @@ inputs:
     default: ""
 
   run_command:
-    description: "Shell command to run perf tests (reads PERF_MODE env)"
+    description: "Shell command to run performance tests (reads PERF_MODE env)"
     required: false
     default: sh run-ci-tests.sh
 
 runs:
   using: "composite"
   steps:
-    - name: Echo inputs
-      shell: bash
-      run: |
-        echo "mode=${{ inputs.mode }}"
-        echo "label_name=${{ inputs.label_name }}"
-        echo "artifact_name=${{ inputs.artifact_name }}"
-        echo "baseline_path=${{ inputs.baseline_path }}"
-        echo "workflow_name=${{ inputs.workflow_name }}"
-        echo "branch=${{ inputs.branch }}"
-        echo "target_repo=${{ inputs.target_repo }}"
-        echo "run_command=${{ inputs.run_command }}"
-
-    # Resolve workflow/repo/branch defaults using runtime contexts (allowed in steps)
-    - name: Resolve defaults
+    - name: Resolve workflow and repository context
       shell: bash
       env:
         IN_WORKFLOW: ${{ inputs.workflow_name }}
@@ -67,23 +53,19 @@ runs:
         REPO_CTX: ${{ github.repository }}
       run: |
         set -euo pipefail
-        WF_NAME="${IN_WORKFLOW:-}"
-        [[ -z "$WF_NAME" ]] && WF_NAME="${WF_CTX}"
-
-        BRANCH="${IN_BRANCH:-}"
-        if [[ -z "$BRANCH" ]]; then
-          if [[ -n "${HEAD_REF}" ]]; then BRANCH="${HEAD_REF}"; else BRANCH="${REF_NAME}"; fi
-        fi
-
-        REPO="${IN_REPO:-}"
-        [[ -z "$REPO" ]] && REPO="${REPO_CTX}"
+        WF_NAME="${IN_WORKFLOW:-$WF_CTX}"
+        BRANCH="${IN_BRANCH:-${HEAD_REF:-$REF_NAME}}"
+        REPO="${IN_REPO:-$REPO_CTX}"
 
         echo "WF_NAME=$WF_NAME" >> "$GITHUB_ENV"
         echo "BRANCH=$BRANCH" >> "$GITHUB_ENV"
         echo "TARGET_REPO=$REPO" >> "$GITHUB_ENV"
-        echo "Resolved: WF_NAME=$WF_NAME BRANCH=$BRANCH TARGET_REPO=$REPO"
+        echo "Resolved context:"
+        echo "  Workflow: $WF_NAME"
+        echo "  Branch: $BRANCH"
+        echo "  Repository: $REPO"
 
-    - name: Resolve PERF_MODE
+    - name: Determine dump or check mode
       id: resolve-mode
       shell: bash
       env:
@@ -98,25 +80,31 @@ runs:
         MODE="${MODE:-auto}"
         if [[ "$MODE" == "dump" ]]; then
           PERF_MODE="--dump"
+          REASON="explicit input"
         elif [[ "$MODE" == "check" ]]; then
           PERF_MODE="--check"
+          REASON="explicit input"
         else
           if [[ "$EVENT_NAME" == "pull_request" ]]; then
             LABELS=$(gh api "repos/$OWNER_REPO/issues/$PR_NUMBER/labels" --jq '.[].name' | tr '\n' ' ')
             if echo "$LABELS" | grep -q -w "$LABEL_NAME"; then
               PERF_MODE="--dump"
+              REASON="label $LABEL_NAME present"
             else
               PERF_MODE="--check"
+              REASON="label $LABEL_NAME absent"
             fi
           else
             PERF_MODE="--check"
+            REASON="non-PR event"
           fi
         fi
+
         echo "PERF_MODE=$PERF_MODE" | tee -a "$GITHUB_ENV"
         echo "perf_mode=$PERF_MODE" >> "$GITHUB_OUTPUT"
+        echo "Mode: $PERF_MODE ($REASON)"
 
-    # Only in check mode: find previous run with artifact and download it
-    - name: Find prior run with baseline
+    - name: Find prior run with performance baseline artifact
       id: find-baseline
       if: ${{ steps.resolve-mode.outputs.perf_mode == '--check' }}
       shell: bash
@@ -128,7 +116,7 @@ runs:
         ARTIFACT_NAME: ${{ inputs.artifact_name }}
       run: |
         set -euo pipefail
-        echo "Searching $TARGET_REPO / '$WORKFLOW_NAME' / branch '$BRANCH' for artifact '$ARTIFACT_NAME'"
+        echo "Searching $TARGET_REPO (workflow: $WORKFLOW_NAME, branch: $BRANCH) for artifact $ARTIFACT_NAME..."
         RUN_IDS=$(gh run list \
           --repo "$TARGET_REPO" \
           --workflow "$WORKFLOW_NAME" \
@@ -138,7 +126,7 @@ runs:
           || true)
 
         if [[ -z "${RUN_IDS:-}" ]]; then
-          echo "No completed runs found on branch '$BRANCH' in $TARGET_REPO."
+          echo "No completed runs found on branch $BRANCH."
           exit 1
         fi
 
@@ -146,18 +134,19 @@ runs:
         for RID in $RUN_IDS; do
           HAS=$(gh api "repos/$TARGET_REPO/actions/runs/$RID/artifacts" \
             --jq ".artifacts | map(select(.name==\"$ARTIFACT_NAME\" and .expired==false)) | length")
-          echo "Run $RID has $HAS matching artifact(s)"
+          echo "Run $RID → $HAS artifact(s)"
           if [[ "$HAS" -gt 0 ]]; then FOUND="$RID"; break; fi
         done
 
         if [[ -z "${FOUND:-}" ]]; then
-          echo "No prior completed run on '$BRANCH' has artifact '$ARTIFACT_NAME'. Seed a baseline once."
+          echo "No suitable run with artifact $ARTIFACT_NAME found."
           exit 1
         fi
 
         echo "run_id=$FOUND" >> "$GITHUB_OUTPUT"
+        echo "Found performance baseline in run: $FOUND"
 
-    - name: Download baseline
+    - name: Download performance baseline artifact
       if: ${{ steps.resolve-mode.outputs.perf_mode == '--check' }}
       uses: actions/download-artifact@v4
       with:
@@ -166,7 +155,7 @@ runs:
         path: tests/perf-regression
         github-token: ${{ github.token }}
 
-    - name: Normalize baseline path
+    - name: Normalize performance baseline path
       if: ${{ steps.resolve-mode.outputs.perf_mode == '--check' }}
       shell: bash
       env:
@@ -175,21 +164,21 @@ runs:
         set -euo pipefail
         FILE="$(find tests/perf-regression -name 'perf-regression.json' -print -quit || true)"
         if [[ -z "${FILE:-}" ]]; then
-          echo "ERROR: perf-regression.json not found inside downloaded artifact."
+          echo "ERROR: perf-regression.json not found."
           ls -R tests/perf-regression || true
           exit 1
         fi
         mkdir -p "$(dirname "$DEST")"
-        if [[ "$FILE" != "$DEST" ]]; then mv -f "$FILE" "$DEST"; fi
-        echo "Baseline ready at $DEST"
+        [[ "$FILE" != "$DEST" ]] && mv -f "$FILE" "$DEST"
+        echo "Performance Baseline ready at: $DEST"
 
-    - name: Run perf tests
+    - name: Run performance regression tests
       shell: bash
       env:
         PERF_MODE: ${{ env.PERF_MODE }}
       run: ${{ inputs.run_command }}
 
-    - name: Upload baseline (dump mode only)
+    - name: Upload new performance baseline (dump mode)
       if: ${{ steps.resolve-mode.outputs.perf_mode == '--dump' }}
       uses: actions/upload-artifact@v4
       with:
