--- a/.github/actions/release-pkg-pr-version/action.yml
+++ b/.github/actions/release-pkg-pr-version/action.yml
@@ -20,10 +20,10 @@ runs:
       shell: bash
       run: |
         npm ci
-        npm run prepublishOnly
+        npm run prepublish:full
         cd src/mina-signer
         npm ci
-        npm run prepublishOnly
+        npm run prepublish:full
     - name: Publish o1js and mina-signer on pkg-pr-new
       shell: bash
       run: npx pkg-pr-new publish ./ ./src/mina-signer
