--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@types/libsodium-wrappers-sumo": "^0.7.8",
     "@types/minimist": "^1.2.5",
     "@types/node": "^18.14.2",
+    "@types/semver": "^7.7.1",
     "esbuild": "^0.25.5",
     "expect": "^29.0.1",
     "fs-extra": "^10.0.0",
@@ -120,6 +121,7 @@
     "prettier-plugin-organize-imports": "^4.3.0",
     "replace-in-file": "^6.3.5",
     "rimraf": "^3.0.2",
+    "semver": "^7.7.3",
     "ts-jest": "^28.0.8",
     "typedoc": "^0.28.5",
     "typedoc-plugin-markdown": "^4.6.4",
@@ -136,6 +138,9 @@
     "tslib": "^2.3.0"
   },
   "optionalDependencies": {
-    "@o1labs/o1js-darwin-arm64": "file:./native/o1js-darwin-arm64/"
+    "@o1js/native-darwin-arm64": "file:./native/o1js-darwin-arm64",
+    "@o1js/native-darwin-x64": "file:./native/o1js-darwin-x64",
+    "@o1js/native-linux-arm64": "file:./native/o1js-linux-arm64",
+    "@o1js/native-win32-x64": "file:./native/o1js-win32-x64"
   }
 }
