--- a/src/mina-signer/package.json
+++ b/src/mina-signer/package.json
@@ -38,8 +38,10 @@
     "README.md"
   ],
   "dependencies": {
+    "@types/libsodium-wrappers-sumo": "=0.7.8",
     "blakejs": "^1.2.1",
-    "js-sha256": "^0.9.0"
+    "js-sha256": "^0.9.0",
+    "libsodium-wrappers-sumo": "=0.7.15"
   },
   "devDependencies": {
     "pkg-pr-new": "^0.0.9"
