--- a/src/bindings/ocaml/jsoo_exports/dune
+++ b/src/bindings/ocaml/jsoo_exports/dune
@@ -72,8 +72,7 @@
   (javascript_files overrides.js))
  (libraries
   o1js_bindings.lib
-  bindings_js.node_backend
-  bindings_js.native_backend)
+  bindings_js.node_backend)
  (link_deps node_js_kimchi_wasm.js node_js_kimchi_wasm_bg.wasm)
  (instrumentation
   (backend bisect_ppx))
